# just-akash

./: .coderabbit.yaml  .coverage  .env.example  .env.example.tmp  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Justfile  LICENSE  README.md  SECURITY.md  pyproject.toml
.claude/: nf-session-seen-29b851aa-97b3-4b71-baff-1d6884c566d9.flag  nf-session-seen-439228f2-9cf3-4486-8569-062936b48f1b.flag  nf-session-seen-a27d7c53-a7bb-4754-9067-55f9e320de7c.flag  nf-session-seen-ac89c796-9f8d-4a36-b8ce-93d98fa02806.flag
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  secrets.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  current-activity.json
.planning/formal/: bug-model-gaps.json
.planning/memory/: errors.jsonl
.planning/milestones/: v1.5-MILESTONE-AUDIT.md
.planning/phases/06-transport-abstraction-foundation/: 06-01-PLAN.md  06-01-SUMMARY.md  06-02-PLAN.md  06-02-SUMMARY.md  06-RESEARCH.md  06-VALIDATION.md
.planning/phases/07-lease-shell-exec/: 07-01-PLAN.md  07-01-SUMMARY.md  07-02-PLAN.md  07-02-SUMMARY.md  07-RESEARCH.md  07-VALIDATION.md  07-VERIFICATION.md  CLEANUP-REPORT.md
.planning/phases/08-secrets-injection-via-lease-shell/: 08-01-PLAN.md  08-01-SUMMARY.md  08-RESEARCH.md  08-VALIDATION.md  08-VERIFICATION.md
.planning/phases/09-interactive-shell/: 09-01-PLAN.md  09-01-SUMMARY.md  09-02-PLAN.md  09-02-SUMMARY.md  09-03-PLAN.md  09-03-SUMMARY.md  09-RESEARCH.md  09-VALIDATION.md  09-VERIFICATION.md
.planning/phases/10-default-transport-switch-and-fallback/: 10-01-PLAN.md  10-01-SUMMARY.md  10-02-PLAN.md  10-02-SUMMARY.md  10-RESEARCH.md  10-VALIDATION.md  10-VERIFICATION.md  CLEANUP-REPORT.md
.planning/phases/11-test-coverage/: 11-01-PLAN.md  11-01-SUMMARY.md  11-02-PLAN.md  11-02-SUMMARY.md  11-RESEARCH.md  11-VALIDATION.md  11-VERIFICATION.md
.planning/quick/: quorum-debug-latest.md
.planning/quorum/: failures.json
.planning/quorum/rounds/: quorum-rounds-session-1776581045706.jsonl  quorum-rounds-session-1776581046024.jsonl  (+14 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
.planning/telemetry/: conformance-events.jsonl  token-usage.jsonl
docs/: PROTOCOL.md
just_akash/: _e2e.py  api.py  cli.py  deploy.py  sdl_validate.py  test_lifecycle.py  test_secrets_e2e.py  test_shell_e2e.py
just_akash/transport/: __init__.py  base.py  lease_shell.py  ssh.py
scripts/: akash_api.py  deploy.py  test_lifecycle.py
sdl/: cpu-backtest-ssh.yaml
tests/: test_adversarial.py  test_api.py  test_cli.py  test_coverage_gaps.py  test_default_transport.py  test_deploy.py  test_e2e_cleanup.py  test_extra_coverage.py  test_interactive_shell.py  test_lease_shell_exec.py  test_sdl_validate.py  test_transport.py  test_transport_cli_integration.py  test_transport_errors.py  test_transport_inject.py
